# oxideav-vfw

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
docs/codec/: msadds32-query-accept-validation.md  msadds32-receive-e-unexpected.md  msadds32-receive-null-0x20.md  msmpeg4-mpg4c32-rdata-map.md
docs/codec/msmpeg4-traces/: README.md  fourcc-MP43.jsonl  gop-30-352x288.jsonl  i-frame-then-p-frame-176x144.jsonl  i-only-352x288-cif.jsonl  intra-pred-active-352x288.jsonl  qscale-high-352x288.jsonl  qscale-low-352x288.jsonl  with-skip-mbs-352x288.jsonl
examples/: gen_msmpeg4_traces.rs
src/: lib.rs  runtime.rs  trace.rs
src/com/: asf_amt.rs  call.rs  host_iface.rs  host_iface_r31.rs  mod.rs
src/discovery/: cache.rs  codec.rs  mod.rs  paths.rs  probe.rs
src/emulator/: decode.rs  isa_fpu.rs  isa_int.rs  isa_mmx.rs  mmu.rs  mod.rs  regs.rs
src/pe/: exports.rs  header.rs  imports.rs  mod.rs  reloc.rs  sections.rs  test_image.rs
src/win32/: advapi32.rs  gdi32.rs  kernel32.rs  mod.rs  msvcrt.rs  ole32.rs  user32.rs  vfw32.rs  winmm.rs
tests/: README.md  m1_load_dll_main.rs  m2_cinepak_decode.rs  m2_indeo3_driverproc.rs  round107_encoder_trait_integration.rs  round112_encoder_pframe_and_knobs.rs  round11_trace_dump.rs  round13_iv50_multiframe.rs  round14_iv41_surface_probe.rs  round14_iv50_force_mmx.rs  round15_ir41_probe.rs  round16_iv41_multiframe.rs  round178_encoder_data_rate_knob.rs  round17_corpus_specgap.rs  round17_iv41_indeo41.rs  round189_corrupted_cache_recovery.rs  round18_trace_feature.rs  round197_cache_schema_versioning.rs  round19_mmx_dispatch_analysis.rs  round204_cache_noop_save_skip.rs  round20_mpg4c32_load.rs  round21_dsax_load.rs  round21_fpu_smoke.rs  round21_mp43_decompress.rs  round22_decomp_begin_trace.rs  round235_probe_dll_public_surface.rs  round23_mp43_pframe_and_oracle.rs  round24_mp43_multiframe_and_wmv.rs  round257_encoder_knobs_query.rs  round258_encoder_knob_vocabulary.rs  round25_directshow_com_scaffold.rs  round26_user32_cascade_and_pin_receive.rs  round27_filtergraph_and_subtypes.rs  round28_auto_discovery.rs  round29_decoder_trait_integration.rs  round30_dshow_and_indeo_cinepak.rs  round31_dshow_amt_walk_and_downstream.rs  round32_dshow_run_commit_querydir.rs  round33_dshow_real_mp43.rs  round34_dshow_codec_allocator.rs  (+45 more)
tests/common/: avi_extractor.rs  mod.rs  mov_extractor.rs
tests/fixtures/audio/: HOWTO.md  wma1_440hz_mono_1s.wma  wma2_440hz_mono_1s.wma
