[package]
name = "oxideav-vfw"
version = "0.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust 32-bit x86 emulator + PE loader + Video for Windows host that lets oxideav delegate decoding to legitimately-licensed Windows codec DLLs on any platform — for rare/legacy codec compatibility, not day-to-day playback. See docs/winmf/winmf-emulator.md for the design contract."
repository = "https://github.com/OxideAV/oxideav-vfw"
homepage = "https://github.com/OxideAV/oxideav-vfw"
readme = "README.md"
keywords = ["multimedia", "vfw", "x86", "emulator", "oxideav"]
categories = ["multimedia::encoding", "multimedia::video", "emulators"]

[features]
default = ["registry"]
registry = ["dep:oxideav-core"]
# Trace mode — adds reverse-engineering instrumentation surface
# (Win32 stub calls, memory watchpoints, traps) that emits JSONL
# events to a sink configured via the `OXIDEAV_VFW_TRACE_FILE`
# environment variable or [`Sandbox::set_trace_sink`]. Off by
# default; compatibility-only consumers do not pay for the
# probe-site branches. See docs/winmf/winmf-emulator.md
# §"Trace mode" for the design contract.
trace = []
# Sub-feature — enables per-instruction execution trace inside
# the `trace` mode. Imposes ~3× extra overhead on top of `trace`,
# so it gates separately. Has no effect unless `trace` is also
# enabled.
trace-exec = ["trace"]

[dependencies]
oxideav-core = { version = "0.1", optional = true }

[dev-dependencies]
# Used by tests/common/mod.rs to fetch codec DLL fixtures on
# demand from samples.oxideav.org. Dev-dep only, so the
# production crate's dependency tree is unaffected.
ureq = { version = "2", default-features = false, features = ["tls"] }
