[package]
name = "oxideav-vfw"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust 32-bit x86 emulator + PE loader + Video for Windows host that lets oxideav delegate decoding to legitimately-licensed Windows codec DLLs on any platform — for rare/legacy codec compatibility, not day-to-day playback. See docs/winmf/winmf-emulator.md for the design contract."
repository = "https://github.com/OxideAV/oxideav-vfw"
homepage = "https://github.com/OxideAV/oxideav-vfw"
readme = "README.md"
keywords = ["multimedia", "vfw", "x86", "emulator", "oxideav"]
categories = ["multimedia::encoding", "multimedia::video", "emulators"]

[features]
default = ["registry", "auto-discovery"]
registry = ["dep:oxideav-core"]
# Auto-discovery — at `register(&mut RuntimeContext)` time, walk
# the discovery path (`OXIDEAV_VFW_CODEC_PATH` or the platform
# default), probe each `*.dll` / `*.ax` for a VfW or DirectShow
# entry point, and register one `Codec` per recognised FourCC.
# Default-on; consumers building with `default-features = false`
# get the manual `Sandbox` API without the FS scan.
auto-discovery = ["registry", "dep:log", "dep:serde", "dep:serde_json"]
# Trace mode — adds reverse-engineering instrumentation surface
# (Win32 stub calls, memory watchpoints, traps) that emits JSONL
# events to a sink configured via the `OXIDEAV_VFW_TRACE_FILE`
# environment variable or [`Sandbox::set_trace_sink`]. Off by
# default; compatibility-only consumers do not pay for the
# probe-site branches. See docs/winmf/winmf-emulator.md
# §"Trace mode" for the design contract.
trace = []
# Sub-feature — enables per-instruction execution trace inside
# the `trace` mode. Imposes ~3× extra overhead on top of `trace`,
# so it gates separately. Has no effect unless `trace` is also
# enabled.
trace-exec = ["trace"]

[dependencies]
oxideav-core = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
# Used by tests/common/mod.rs to fetch codec DLL fixtures on
# demand from samples.oxideav.org. Dev-dep only, so the
# production crate's dependency tree is unaffected.
ureq = { version = "2", default-features = false, features = ["tls"] }
