[package]
name = "oxideav-vfw"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Thin bridge that wires the ud-emulator 32-bit x86 / PE32 / Video for Windows sandbox into the oxideav codec registry, plus the FS-walking discovery layer that probes ~/.local/share/oxideav/codecs/ for legitimately-licensed Windows codec DLLs."
repository = "https://github.com/OxideAV/oxideav-vfw"
homepage = "https://github.com/OxideAV/oxideav-vfw"
readme = "README.md"
keywords = ["multimedia", "vfw", "x86", "emulator", "oxideav"]
categories = ["multimedia::encoding", "multimedia::video", "emulators"]

[features]
default = ["registry", "auto-discovery"]
registry = ["dep:oxideav-core"]
# Auto-discovery — at `register(&mut RuntimeContext)` time, walk
# the discovery path (`OXIDEAV_VFW_CODEC_PATH` or the platform
# default), probe each `*.dll` / `*.ax` for a VfW or DirectShow
# entry point, and register one `Codec` per recognised FourCC.
# Default-on; consumers building with `default-features = false`
# get the bare ud-emulator re-exports without the FS scan.
auto-discovery = ["registry", "dep:log", "dep:serde", "dep:serde_json"]
# Trace mode — passthrough to `ud-emulator/trace`. Off by default.
# See ud-emulator's docs for the JSONL probe-site schema.
trace = ["ud-emulator/trace"]
# Sub-feature — enables per-instruction execution trace inside
# `trace` mode. Imposes ~3× extra overhead on top of `trace`.
trace-exec = ["trace", "ud-emulator/trace-exec"]

[dependencies]
ud-emulator = "0.1"
oxideav-core = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
# Tests that exercise the bridge's `discover()` cache layer use the
# synthetic-PE helper from ud-emulator (`pe::test_image::build_minimal_dll`).
ud-emulator = "0.1"
